--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,21 @@
         padding: 0px;
         margin: 0px;
       }
+
+      .container {
+        display: flex;
+      }
+
+      .scene {
+        width: 80%;
+        height: 100vh;
+      }
+
+      .panel {
+        width: 20%;
+        height: 100vh;
+        padding: 4px;
+      }
     </style>
   </head>
   <body>
